# fileman_rs

./: Cargo.toml  ChangeLog  README.md
.github/templates/: issue_report.md  pull_request.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/organize/: mod.rs
src/tools/: collect_files.rs  get_num_files.rs  mod.rs
