[package]
name = "fileman_rs"
version = "0.2.0"
edition = "2021"
authors = ["Sam Wyss"]
description = "A high-performance file management system for working with large quantities of files written in Rust."
license = "	BSD-3-Clause"
repository = "https://github.com/samwyss/fileman_rs"
readme = "./README.md"
keywords = ["rust", "file", "management", "organization"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.30" , features = ["macros", "formatting", "parsing"]}
